# SecureAIApp-main

backend/: .gitignore  pyproject.toml
backend/src/: .env  ai_generator.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: .env  package-lock.json
frontend/.senv/: pyvenv.cfg
frontend/.senv/Scripts/: activate  activate.bat
frontend/src/challenge/: MCQChallenge.jsx
