[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=2.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "openai>=1.79.0",
    "pymongo>=4.15.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "svix>=1.65.0",
    "uvicorn>=0.34.2",
]
